Bug 301728 - Segfault on systemsettings desktop apparence (KDecoration)
Summary: Segfault on systemsettings desktop apparence (KDecoration)
Status: RESOLVED FIXED
Alias: None
Product: kwin
Classification: Plasma
Component: decorations (other bugs)
Version First Reported In: 4.8.80
Platform: Ubuntu Linux
: NOR crash
Target Milestone: ---
Assignee: KWin default assignee
URL:
Keywords:
: 301826 302112 303938 (view as bug list)
Depends on:
Blocks:
 
Reported: 2012-06-12 12:40 UTC by loic.grobol
Modified: 2012-08-02 12:24 UTC (History)
6 users (show)

See Also:
Latest Commit:
Version Fixed/Implemented In: 4.9rc2
Sentry Crash Report:


Attachments
New crash information added by DrKonqi (5.21 KB, text/plain)
2012-08-01 22:13 UTC, sinozzuke
Details
New crash information added by DrKonqi (6.04 KB, text/plain)
2012-08-02 12:24 UTC, suebi
Details

Note You need to log in before you can comment on or make changes to this bug.
Description loic.grobol 2012-06-12 12:40:02 UTC
Application: systemsettings (1.0)
KDE Platform Version: 4.8.80 (4.8.80)
Qt Version: 4.8.1
Operating System: Linux 3.2.0-25-generic x86_64
Distribution: Ubuntu 12.04 LTS

-- Information about the crash:
- What I was doing when the application crashed: Trying to adjust desktop apparence (Apparence de l'espace de travail).

This may be related to bug 301718

-- Backtrace:
Application: Configuration du système (systemsettings), signal: Segmentation fault
Using host libthread_db library "/lib/x86_64-linux-gnu/libthread_db.so.1".
[Current thread is 1 (Thread 0x7fa8bfef1780 (LWP 3348))]

Thread 3 (Thread 0x7fa8a361e700 (LWP 3349)):
#0  0x00007fa8bce97b03 in __GI___poll (fds=<optimized out>, nfds=<optimized out>, timeout=<optimized out>) at ../sysdeps/unix/sysv/linux/poll.c:87
#1  0x00007fa8b65ea036 in ?? () from /lib/x86_64-linux-gnu/libglib-2.0.so.0
#2  0x00007fa8b65ea164 in g_main_context_iteration () from /lib/x86_64-linux-gnu/libglib-2.0.so.0
#3  0x00007fa8bd618426 in QEventDispatcherGlib::processEvents (this=0x7fa89c0008c0, flags=...) at kernel/qeventdispatcher_glib.cpp:426
#4  0x00007fa8bd5e7c82 in QEventLoop::processEvents (this=<optimized out>, flags=...) at kernel/qeventloop.cpp:149
#5  0x00007fa8bd5e7ed7 in QEventLoop::exec (this=0x7fa8a361ddd0, flags=...) at kernel/qeventloop.cpp:204
#6  0x00007fa8bd4e6fa7 in QThread::exec (this=<optimized out>) at thread/qthread.cpp:501
#7  0x00007fa8bd5c79ff in QInotifyFileSystemWatcherEngine::run (this=0x1f61d10) at io/qfilesystemwatcher_inotify.cpp:248
#8  0x00007fa8bd4e9fcb in QThreadPrivate::start (arg=0x1f61d10) at thread/qthread_unix.cpp:298
#9  0x00007fa8b6ab6e9a in start_thread (arg=0x7fa8a361e700) at pthread_create.c:308
#10 0x00007fa8bcea34bd in clone () at ../sysdeps/unix/sysv/linux/x86_64/clone.S:112
#11 0x0000000000000000 in ?? ()

Thread 2 (Thread 0x7fa8a29c6700 (LWP 3350)):
#0  pthread_cond_wait@@GLIBC_2.3.2 () at ../nptl/sysdeps/unix/sysv/linux/x86_64/pthread_cond_wait.S:162
#1  0x00007fa8bacdd222 in ?? () from /usr/lib/x86_64-linux-gnu/libQtScript.so.4
#2  0x00007fa8bacdd259 in ?? () from /usr/lib/x86_64-linux-gnu/libQtScript.so.4
#3  0x00007fa8b6ab6e9a in start_thread (arg=0x7fa8a29c6700) at pthread_create.c:308
#4  0x00007fa8bcea34bd in clone () at ../sysdeps/unix/sysv/linux/x86_64/clone.S:112
#5  0x0000000000000000 in ?? ()

Thread 1 (Thread 0x7fa8bfef1780 (LWP 3348)):
[KCrash Handler]
#6  0x00007fa8a095f156 in KDecorationOptions::font(bool, bool) const () from /usr/lib/libkdecorations.so.4
#7  0x00007fa8a0b75ab8 in ?? () from /usr/lib/kde4/kwin3_skulpture.so
#8  0x00007fa8a2c06352 in KDecorationPreview::recreateDecoration (this=0x1fd6300, plugins=0x1fd6250) at ../../../../kwin/kcmkwin/kwindecoration/preview.cpp:77
#9  0x00007fa8a2c0839d in KWin::DecorationModel::regeneratePreview (this=0x1fd6130, index=..., size=...) at ../../../../kwin/kcmkwin/kwindecoration/decorationmodel.cpp:291
#10 0x00007fa8a2c084b2 in KWin::DecorationModel::regeneratePreviews (this=0x1fd6130) at ../../../../kwin/kcmkwin/kwindecoration/decorationmodel.cpp:261
#11 0x00007fa8a2bfd013 in KWin::KWinDecorationModule::KWinDecorationModule (this=0x1f834f0, parent=<optimized out>) at ../../../../kwin/kcmkwin/kwindecoration/kwindecoration.cpp:121
#12 0x00007fa8a2bfddf4 in KPluginFactory::createInstance<KWin::KWinDecorationModule, QWidget> (parentWidget=<optimized out>, parent=<optimized out>, args=...) at /usr/include/KDE/../kpluginfactory.h:477
#13 0x00007fa8bdddb891 in KPluginFactory::create (this=0x1f6dcb0, iface=0x7fa8bf11dc00 "KCModule", parentWidget=0x0, parent=0x1ecfbf0, args=..., keyword=...) at ../../kdecore/util/kpluginfactory.cpp:203
#14 0x00007fa8bf5ff708 in create<KCModule> (parent=0x1ecfbf0, this=0x1f6dcb0, args=..., keyword=..., parentWidget=0x0) at ../../kdecore/util/kpluginfactory.h:531
#15 createInstance<KCModule> (error=0x7fffb760c990, args=..., parent=0x1ecfbf0, parentWidget=0x0, this=0x1b541d0) at ../../kdecore/services/kservice.h:559
#16 createInstance<KCModule> (error=0x7fffb760c990, args=..., parent=0x1ecfbf0, this=0x1b541d0) at ../../kdecore/services/kservice.h:536
#17 KCModuleLoader::loadModule (mod=..., report=KCModuleLoader::Inline, parent=0x1ecfbf0, args=...) at ../../kutils/kcmoduleloader.cpp:89
#18 0x00007fa8bf6045f8 in KCModuleProxyPrivate::loadModule (this=0x1f71d90) at ../../kutils/kcmoduleproxy.cpp:106
#19 0x00007fa8bf605315 in KCModuleProxy::realModule (this=<optimized out>) at ../../kutils/kcmoduleproxy.cpp:83
#20 0x00007fa8bf605352 in KCModuleProxy::showEvent (this=0x1ecfbf0, ev=0x7fffb760d820) at ../../kutils/kcmoduleproxy.cpp:197
#21 0x00007fa8be2b13f5 in QWidget::event (this=0x1ecfbf0, event=0x7fffb760d820) at kernel/qwidget.cpp:8569
#22 0x00007fa8be260894 in notify_helper (e=0x7fffb760d820, receiver=0x1ecfbf0, this=0x1964cf0) at kernel/qapplication.cpp:4559
#23 QApplicationPrivate::notify_helper (this=0x1964cf0, receiver=0x1ecfbf0, e=0x7fffb760d820) at kernel/qapplication.cpp:4531
#24 0x00007fa8be265713 in QApplication::notify (this=0x7fffb76100a0, receiver=0x1ecfbf0, e=0x7fffb760d820) at kernel/qapplication.cpp:4420
#25 0x00007fa8bef9abc6 in KApplication::notify (this=0x7fffb76100a0, receiver=0x1ecfbf0, event=0x7fffb760d820) at ../../kdeui/kernel/kapplication.cpp:311
#26 0x00007fa8bd5e8e9c in QCoreApplication::notifyInternal (this=0x7fffb76100a0, receiver=0x1ecfbf0, event=0x7fffb760d820) at kernel/qcoreapplication.cpp:876
#27 0x00007fa8be2b3810 in sendEvent (event=0x7fffb760d820, receiver=0x1ecfbf0) at ../../include/QtCore/../../src/corelib/kernel/qcoreapplication.h:231
#28 QWidgetPrivate::show_helper (this=0x1f71e50) at kernel/qwidget.cpp:7542
#29 0x00007fa8be2b3607 in QWidgetPrivate::showChildren (this=<optimized out>, spontaneous=false) at kernel/qwidget.cpp:7850
#30 0x00007fa8be2b36fd in QWidgetPrivate::show_helper (this=<optimized out>) at kernel/qwidget.cpp:7489
#31 0x00007fa8be2b3b02 in QWidget::setVisible (this=0x1f7b320, visible=<optimized out>) at kernel/qwidget.cpp:7764
#32 0x00007fa8be2b3676 in show (this=0x1f7b320) at ../../include/QtGui/../../src/gui/kernel/qwidget.h:494
#33 QWidgetPrivate::showChildren (this=<optimized out>, spontaneous=false) at kernel/qwidget.cpp:7852
#34 0x00007fa8be2b36fd in QWidgetPrivate::show_helper (this=<optimized out>) at kernel/qwidget.cpp:7489
#35 0x00007fa8be2b3b02 in QWidget::setVisible (this=0x1ed16a0, visible=<optimized out>) at kernel/qwidget.cpp:7764
#36 0x00007fa8be295389 in show (this=0x1ed16a0) at ../../include/QtGui/../../src/gui/kernel/qwidget.h:494
#37 QStackedLayout::setCurrentIndex (this=0x1ce7200, index=1) at kernel/qstackedlayout.cpp:311
#38 0x00007fa8befca397 in KPageViewPrivate::_k_pageSelected (this=0x1ccba80, index=..., previous=...) at ../../kdeui/paged/kpageview.cpp:235
#39 0x00007fa8bd5fd281 in QMetaObject::activate (sender=0x1f6b960, m=<optimized out>, local_signal_index=<optimized out>, argv=0x7fffb760dd10) at kernel/qobject.cpp:3547
#40 0x00007fa8be7dd8b7 in QItemSelectionModel::selectionChanged (this=<optimized out>, _t1=..., _t2=...) at .moc/release-shared/moc_qitemselectionmodel.cpp:166
#41 0x00007fa8be7e3714 in QItemSelectionModel::emitSelectionChanged (this=0x1f6b960, newSelection=..., oldSelection=...) at itemviews/qitemselectionmodel.cpp:1544
#42 0x00007fa8be7e46a1 in QItemSelectionModel::select (this=0x1f6b960, selection=..., command=...) at itemviews/qitemselectionmodel.cpp:1110
#43 0x00007fa8be7df8ea in QItemSelectionModel::select (this=0x1f6b960, index=..., command=...) at itemviews/qitemselectionmodel.cpp:985
#44 0x00007fa8be7ddb27 in QItemSelectionModel::setCurrentIndex (this=0x1f6b960, index=..., command=...) at itemviews/qitemselectionmodel.cpp:1174
#45 0x00007fa8befc90e7 in KPageViewPrivate::_k_rebuildGui (this=0x1ccba80) at ../../kdeui/paged/kpageview.cpp:70
#46 0x00007fa8befca0e5 in KPageViewPrivate::_k_modelChanged (this=0x1ccba80) at ../../kdeui/paged/kpageview.cpp:190
#47 0x00007fa8bd5fd281 in QMetaObject::activate (sender=0x1ced2d0, m=<optimized out>, local_signal_index=<optimized out>, argv=0x0) at kernel/qobject.cpp:3547
#48 0x00007fa8befcf460 in KPageWidgetModel::addPage (this=0x1ced2d0, item=0x1ba0b20) at ../../kdeui/paged/kpagewidgetmodel.cpp:401
#49 0x00007fa8bf3dddbc in ModuleView::addModule (this=0x1cc97e0, module=0x1ba87a8) at ../../../systemsettings/core/ModuleView.cpp:191
#50 0x00007fa8bf3de232 in ModuleView::loadModule (this=0x1cc97e0, menuItem=...) at ../../../systemsettings/core/ModuleView.cpp:144
#51 0x00007fa8a46c4678 in IconMode::changeModule (this=0x1cebf60, activeModule=...) at ../../../systemsettings/icons/IconMode.cpp:134
#52 0x00007fa8bd5fd281 in QMetaObject::activate (sender=0x1a7aae0, m=<optimized out>, local_signal_index=<optimized out>, argv=0x7fffb760e6e0) at kernel/qobject.cpp:3547
#53 0x00007fa8be786b05 in QAbstractItemView::activated (this=<optimized out>, _t1=...) at .moc/release-shared/moc_qabstractitemview.cpp:362
#54 0x00007fa8be786cb0 in QAbstractItemView::mouseDoubleClickEvent (this=0x1a7aae0, event=0x7fffb760f3c0) at itemviews/qabstractitemview.cpp:1849
#55 0x00007fa8be2b115e in QWidget::event (this=0x1a7aae0, event=0x7fffb760f3c0) at kernel/qwidget.cpp:8366
#56 0x00007fa8be6713b6 in QFrame::event (this=0x1a7aae0, e=0x7fffb760f3c0) at widgets/qframe.cpp:557
#57 0x00007fa8be78589b in QAbstractItemView::viewportEvent (this=0x1a7aae0, event=0x7fffb760f3c0) at itemviews/qabstractitemview.cpp:1644
#58 0x00007fa8bd5e9028 in QCoreApplicationPrivate::sendThroughObjectEventFilters (this=<optimized out>, receiver=0x1ce8970, event=0x7fffb760f3c0) at kernel/qcoreapplication.cpp:986
#59 0x00007fa8be26085f in notify_helper (e=0x7fffb760f3c0, receiver=0x1ce8970, this=0x1964cf0) at kernel/qapplication.cpp:4555
#60 QApplicationPrivate::notify_helper (this=0x1964cf0, receiver=0x1ce8970, e=0x7fffb760f3c0) at kernel/qapplication.cpp:4531
#61 0x00007fa8be2660bf in QApplication::notify (this=<optimized out>, receiver=0x1ce8970, e=0x7fffb760f3c0) at kernel/qapplication.cpp:4102
#62 0x00007fa8bef9abc6 in KApplication::notify (this=0x7fffb76100a0, receiver=0x1ce8970, event=0x7fffb760f3c0) at ../../kdeui/kernel/kapplication.cpp:311
#63 0x00007fa8bd5e8e9c in QCoreApplication::notifyInternal (this=0x7fffb76100a0, receiver=0x1ce8970, event=0x7fffb760f3c0) at kernel/qcoreapplication.cpp:876
#64 0x00007fa8be261862 in sendEvent (event=<optimized out>, receiver=<optimized out>) at ../../include/QtCore/../../src/corelib/kernel/qcoreapplication.h:231
#65 QApplicationPrivate::sendMouseEvent (receiver=0x1ce8970, event=0x7fffb760f3c0, alienWidget=0x1ce8970, nativeWidget=0x1a75e00, buttonDown=0x1ce8970, lastMouseReceiver=..., spontaneous=true) at kernel/qapplication.cpp:3170
#66 0x00007fa8be2e0bf5 in QETWidget::translateMouseEvent (this=0x1a75e00, event=<optimized out>) at kernel/qapplication_x11.cpp:4617
#67 0x00007fa8be2dfbae in QApplication::x11ProcessEvent (this=0x7fffb76100a0, event=0x7fffb760fc90) at kernel/qapplication_x11.cpp:3732
#68 0x00007fa8be3090d2 in x11EventSourceDispatch (s=0x195ae00, callback=0, user_data=0x0) at kernel/qguieventdispatcher_glib.cpp:146
#69 0x00007fa8b65e9d53 in g_main_context_dispatch () from /lib/x86_64-linux-gnu/libglib-2.0.so.0
#70 0x00007fa8b65ea0a0 in ?? () from /lib/x86_64-linux-gnu/libglib-2.0.so.0
#71 0x00007fa8b65ea164 in g_main_context_iteration () from /lib/x86_64-linux-gnu/libglib-2.0.so.0
#72 0x00007fa8bd6183bf in QEventDispatcherGlib::processEvents (this=0x1917ad0, flags=...) at kernel/qeventdispatcher_glib.cpp:424
#73 0x00007fa8be308d5e in QGuiEventDispatcherGlib::processEvents (this=<optimized out>, flags=...) at kernel/qguieventdispatcher_glib.cpp:204
#74 0x00007fa8bd5e7c82 in QEventLoop::processEvents (this=<optimized out>, flags=...) at kernel/qeventloop.cpp:149
#75 0x00007fa8bd5e7ed7 in QEventLoop::exec (this=0x7fffb7610030, flags=...) at kernel/qeventloop.cpp:204
#76 0x00007fa8bd5ecf67 in QCoreApplication::exec () at kernel/qcoreapplication.cpp:1148
#77 0x000000000040a9e5 in main (argc=5, argv=0x7fffb7610368) at ../../../systemsettings/app/main.cpp:49

This bug may be a duplicate of or related to bug 301718.

Reported using DrKonqi
Comment 1 Christoph Feck 2012-06-12 13:58:01 UTC
Skulpture does not use the unstable decoration API, so there is a regression in KWin stable API.
Comment 2 Thomas Lübking 2012-06-12 19:26:52 UTC
mehh - i assume neither removing (the exported...) ClientGroupItem class nor renaming clientGroupItemDragMimeType() to tabDragMimeType() (which is defined in the stable KDecorationDefines...) was ABI stable

-> we got to reintroduce that class and re-add the static function as well as clientGroupItemDragMimeType() (in addition but not inlined)

I'll try whether adding the class, recompiling bespin/skulpture with it and removing it afterwards will crash those decos.
Comment 3 Thomas Lübking 2012-06-12 19:31:34 UTC
-> at least caused no crash for bespin, could be compiler optimization related, though :-(
Comment 4 Christoph Feck 2012-06-13 17:40:35 UTC
*** Bug 301826 has been marked as a duplicate of this bug. ***
Comment 5 Jekyll Wu 2012-06-18 10:35:15 UTC
*** Bug 302112 has been marked as a duplicate of this bug. ***
Comment 6 Thomas Lübking 2012-07-05 17:55:20 UTC
Git commit 412f28e5c88803109c56b8cbd923a69fc09bdfeb by Thomas Lübking.
Committed on 28/06/2012 at 18:15.
Pushed by luebking into branch 'KDE/4.9'.

restore stable kdecoration API to 4.8
FIXED-IN: 4.9rc2
REVIEW: 105377

M  +48   -2    kwin/libkdecorations/kdecoration.h

http://commits.kde.org/kde-workspace/412f28e5c88803109c56b8cbd923a69fc09bdfeb
Comment 7 Christoph Feck 2012-07-22 23:30:58 UTC
*** Bug 303938 has been marked as a duplicate of this bug. ***
Comment 8 sebastião 2012-07-23 00:06:03 UTC
Em 22-07-2012 20:30, Christoph Feck escreveu:
> https://bugs.kde.org/show_bug.cgi?id=301728
>
> Christoph Feck <christoph@maxiom.de> changed:
>
>             What    |Removed                     |Added
> ----------------------------------------------------------------------------
>                   CC|                            |sfranzini688@gmail.com
>
> --- Comment #7 from Christoph Feck <christoph@maxiom.de> ---
> *** Bug 303938 has been marked as a duplicate of this bug. ***
>
I read the bug 301728, but I understand who it has been fixed in 4.8.90
and I am using it, I don't know if the bug is the same.
Comment 9 Martin Flöser 2012-07-23 04:28:02 UTC
(In reply to comment #8)
> I read the bug 301728, but I understand who it has been fixed in 4.8.90
> and I am using it, I don't know if the bug is the same.
the fixed-in field says it's fixed in rc2, which is version 4.8.97
Comment 10 sinozzuke 2012-08-01 22:13:00 UTC
Created attachment 72881 [details]
New crash information added by DrKonqi

systemsettings (1.0) on KDE Platform 4.8.90 (4.8.90) using Qt 4.8.1

- What I was doing when the application crashed:
open systemsettings
trying to change Windows Apperance

-- Backtrace (Reduced):
#6  0x00007f61f97d1156 in KDecorationOptions::font(bool, bool) const () from /usr/lib/libkdecorations.so.4
[...]
#8  0x00007f61fb75ee32 in KDecorationPreview::recreateDecoration (this=0x2840420, plugins=0x28403c0) at ../../../../kwin/kcmkwin/kwindecoration/preview.cpp:77
#9  0x00007f61fb760e95 in KWin::DecorationModel::regeneratePreview (this=0x2840290, index=..., size=...) at ../../../../kwin/kcmkwin/kwindecoration/decorationmodel.cpp:311
#10 0x00007f61fb7611f5 in KWin::DecorationModel::regenerateNextPreview (this=0x2840290) at ../../../../kwin/kcmkwin/kwindecoration/decorationmodel.cpp:262
#11 0x00007f62165db446 in QObject::event (this=0x2840290, e=<optimized out>) at kernel/qobject.cpp:1195
Comment 11 suebi 2012-08-02 12:24:35 UTC
Created attachment 72895 [details]
New crash information added by DrKonqi

systemsettings (1.0) on KDE Platform 4.9.00 using Qt 4.8.1

- What I was doing when the application crashed: Trying to change the Window Decoration in systemsettings

-- Backtrace (Reduced):
#7  0xacdd09f4 in KDecorationOptions::font(bool, bool) const () from /usr/lib/libkdecorations.so.4
[...]
#10 0xade7c1c9 in KDecorationPreview::recreateDecoration (this=0xa153778, plugins=0xa118c28) at ../../../../kwin/kcmkwin/kwindecoration/preview.cpp:77
#11 0xade7e8ca in KWin::DecorationModel::regeneratePreview (this=0xa152680, index=..., size=...) at ../../../../kwin/kcmkwin/kwindecoration/decorationmodel.cpp:332
#12 0xade7ec2e in KWin::DecorationModel::regenerateNextPreview (this=0xa152680) at ../../../../kwin/kcmkwin/kwindecoration/decorationmodel.cpp:279
#13 0xade6b995 in KWin::DecorationModel::qt_static_metacall (_o=0xa152680, _c=QMetaObject::InvokeMetaMethod, _id=1, _a=0xa2ae190) at moc_decorationmodel.cpp:53