restore stable kdecoration API to 4.8

BUG: 301728
FIXED-IN: 4.9rc2
REVIEW: 105377